--- a/css/style.css
+++ b/css/style.css
@@ -252,61 +252,61 @@ h1 {
 
 
 
-/*********************************************************************/
+/*!*********************************************************************!*/
 
-/* CSS FOR BUTTON TO ADD A POINT */
+/*!* CSS FOR BUTTON TO ADD A POINT *!*/
 
-/* BACKGROUND DIV OF THE ADD A POINT BUTTON */
+/*!* BACKGROUND DIV OF THE ADD A POINT BUTTON *!*/
 
-#add-a-point {
-    display: block;
-    position: fixed;
-    left: 92.5%;
-    bottom: 5%;
-    border-radius: 4px;
-    height: .75em;
-    width: 1.25em;
-    z-index: 100000;
-    background-color: rgba(255, 189, 0, 0.8);
-    padding-top: .5em;
-    padding-left: 1em;
-    padding-bottom: 1em;
-    color: black;
-    font-weight: 500;
-    font-size: 20px;
-    text-decoration: none;
-    box-shadow: 0 0 2px 2px #303030;
-}
+/*#add-a-point {*/
+    /*display: block;*/
+    /*position: fixed;*/
+    /*left: 92.5%;*/
+    /*bottom: 5%;*/
+    /*border-radius: 4px;*/
+    /*height: .75em;*/
+    /*width: 1.25em;*/
+    /*z-index: 100000;*/
+    /*background-color: rgba(255, 189, 0, 0.8);*/
+    /*padding-top: .5em;*/
+    /*padding-left: 1em;*/
+    /*padding-bottom: 1em;*/
+    /*color: black;*/
+    /*font-weight: 500;*/
+    /*font-size: 20px;*/
+    /*text-decoration: none;*/
+    /*box-shadow: 0 0 2px 2px #303030;*/
+/*}*/
 
-/* MAKE BACKGROUND DIV CHANGE COLOR */
+/*!* MAKE BACKGROUND DIV CHANGE COLOR *!*/
 
-#add-a-point:hover {
-    background-color: rgba(255, 189, 0, 1);
-}
+/*#add-a-point:hover {*/
+    /*background-color: rgba(255, 189, 0, 1);*/
+/*}*/
 
-#cross {
-    background-color: rgba(35, 31, 32, 1);
-    position: relative;
-    /* ADJUSTS THE HEIGHT OF THE VERTICAL BAR */
-    height: 25px;
-    /* ADJUSTS THE WIDTH OF THE VERTICAL BAR */
-    width: 3px;
+/*#cross {*/
+    /*background-color: rgba(35, 31, 32, 1);*/
+    /*position: relative;*/
+    /*!* ADJUSTS THE HEIGHT OF THE VERTICAL BAR *!*/
+    /*height: 25px;*/
+    /*!* ADJUSTS THE WIDTH OF THE VERTICAL BAR *!*/
+    /*width: 3px;*/
 
-}
+/*}*/
 
-#cross:after {
-    background-color: rgba(35, 31, 32, 1);
-    position: absolute;
-    content: "";
-    /* ADJUSTS THE POSITION LEFT OR RIGHT OF THE HORIZONTAL BAR */
-    left: -10px;
-    /* ADJUSTS THE POSITION UP OR DOWN OF THE HORIZONTAL BAR */
-    top: 11px;
-    /* ADJUSTS THE HEIGHT OF THE HORIZONTAL BAR */
-    height: 3px;
-    /* ADJUSTS THE WIDTH OF THE HORIZONTAL BAR */
-    width: 25px;
-}
+/*#cross:after {*/
+    /*background-color: rgba(35, 31, 32, 1);*/
+    /*position: absolute;*/
+    /*content: "";*/
+    /*!* ADJUSTS THE POSITION LEFT OR RIGHT OF THE HORIZONTAL BAR *!*/
+    /*left: -10px;*/
+    /*!* ADJUSTS THE POSITION UP OR DOWN OF THE HORIZONTAL BAR *!*/
+    /*top: 11px;*/
+    /*!* ADJUSTS THE HEIGHT OF THE HORIZONTAL BAR *!*/
+    /*height: 3px;*/
+    /*!* ADJUSTS THE WIDTH OF THE HORIZONTAL BAR *!*/
+    /*width: 25px;*/
+/*}*/
 
 
 
@@ -322,27 +322,8 @@ h1 {
 .leaflet-top {
     position: absolute;
     margin-top: 6.2em;
-    padding-top: 1em;
     z-index: 1000;
 }
-
-/* Hide the zoom buttons */
-
-/*
-.leaflet-control-zoom.leaflet-bar.leaflet-control {
-    display: none;
-}
-*/
-
-
-/* HIDES LEAFLET ZOOM CONTROLS */
-/*
-
-a.leaflet-control-zoom-in,
-a.leaflet-control-zoom-out {
-    display: none;
-}
-*/
 
 
 /* GETS RID OF BASE LAYER CONTROLS */
@@ -356,6 +337,15 @@ a.leaflet-control-zoom-out {
 .leaflet-touch .leaflet-control-layers {
     width: 200px;
 }
+
+/*CONROL ZOOM */
+.leaflet-control-zoom{
+display:none;
+}
+
+
+
+
 
 
 
@@ -408,57 +398,15 @@ a.leaflet-control-zoom-out {
 
 /* Search bar */
 
-.leaflet-center {
-    width: 40%;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
+
+
+.geocoder-control{
+    left: 1em;
+    top:-.3em;
+    position:absolute;
 }
 
-.leaflet-control-geosearch,
-.leaflet-control-geosearch ul {
-    border-radius: 7px;
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
-    margin: 10px 0 0 0;
-    top: 7em;
-    padding: 5px;
-    margin-left: 12px;
-    width: 250px;
-    height: auto;  
-}
 
-.leaflet-control-geosearch-msg ul {
-    list-style: none;
-    display: none;
-    height: auto;
-    background: none;
-    padding: 0;
-}
-
-.leaflet-control-geosearch ul li {
-    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.75);
-    border-radius: 4px;
-    margin: 20px 0;
-    padding: 4px;
-    font: 12px arial;
-    text-indent: 4px;
-}
-
-.leaflet-container .leaflet-control-geosearch input {
-    width: 100%;
-    height: 28px;
-    padding: 0;
-    text-indent: 8px;
-    background: rgba(255, 255, 255, 0.75);
-    border-radius: 4px;
-    border: none;
-
-}
-
-#geocoder-control-input {
-    position: absolute;
-    width: 200px;
-}
 
 
 /**********************************************************************/
@@ -483,10 +431,6 @@ a.leaflet-control-zoom-out {
         font-size: 34px;
     }
 
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 5.8em;
-    }
 }
 
 @media (max-width: 1198px) {
@@ -494,21 +438,12 @@ a.leaflet-control-zoom-out {
         font-size: 32px;
     }
 
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 5.6em;
-    }
 }
 
 
 @media (max-width: 1160px) {
     h1 {
         font-size: 32px;
-    }
-
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 5.3em;
     }
 }
 
@@ -524,29 +459,17 @@ a.leaflet-control-zoom-out {
         font-size: 28px;
     }
 
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 5em;
-    }
-}
 
 @media (max-width: 1024px) {
     h1 {
         font-size: 26px;
     }
 
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 4.7em;
-    }
 }
 
 
 @media (max-width: 900px) {
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 4.3em;
-    }
+
 }
 
 
@@ -555,10 +478,6 @@ a.leaflet-control-zoom-out {
         font-size: 22px;
     }
 
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 4.3em;
-    }
 }
 
 @media (max-width: 821px) {
@@ -566,10 +485,6 @@ a.leaflet-control-zoom-out {
         font-size: 20px;
     }
 
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 4em;
-    }
 }
 
 
@@ -603,10 +518,6 @@ a.leaflet-control-zoom-out {
         padding-bottom: 10px;
     }
 
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 3.8em;
-    }
 
     h1 {
         margin-bottom: 0;
@@ -629,10 +540,6 @@ a.leaflet-control-zoom-out {
 }
 
 @media (max-width: 720px) {
-    /* POSITION SEARCH BAR */
-    .leaflet-top {
-        margin-top: 3.7em;
-    }
 
     #add-a-point {
         left: 85.5%;
@@ -702,10 +609,7 @@ a.leaflet-control-zoom-out {
     }
 
 
-    /* POSITIONING SEARCH BAR */
-    .leaflet-top {
-        margin-top: 7.2em;
-    }
+
 
     /* TITLE */
     h1 {
